# heap-analyzer

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: agent.cpp  debug_references.cpp  net_enigma_test_toolkit_TestToolkitAgent.cpp  references.cpp  simple_functions.cpp  utils.cpp
src/main/h/: debug_references.h  references.h  utils.h
src/main/java/net/enigma/test/toolkit/: HeapAnalyzer.java  HeapAnalyzerAgent.java  HeapAnalyzerExamples.java  HeapTraversalSummary.java  TestToolkit.java  TestToolkitAgent.java  TestToolkitExamples.java
src/test/java/net/enigma/test/tookit/: TestToolkitAgentTest.java
src/test/java/net/enigma/test/toolkit/: HeapAnalyzerAgentTest.java  TestToolkitAgentTest.java
